fix: fix prev and next btn visibility bug

--- a/src/components/ui/slider/Slider.module.css
+++ b/src/components/ui/slider/Slider.module.css
@@ -77,7 +77,6 @@
   display: flex;
   align-items: center;
   width: 430px;
-  /* overflow-y: hidden; */
   overflow-x: scroll;
   scroll-behavior: smooth;
   column-gap: 15px;
@@ -123,10 +122,6 @@
 
 .activeSlide {
   opacity: 1;
-}
-
-.hidden {
-  display: none;
 }
 
 /* media */
